<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fleet_adapter_clearpath</name>
  <version>1.0.0</version>
  <description>Fleet adapter for clearpath robots</description>
  <maintainer email="yadunund@openrobotics.org">Yadunund</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rmf_fleet_adapter</depend>
  <depend>rmf_utils</depend>
  <depend>rmf_task_msgs</depend>

  <depend>clearpath_api</depend>
  <depend>command_control_msgs_utils</depend>
  <depend>appliance_control_msgs</depend>
  <depend>command_control_msgs</depend>
  <depend>configuration_msgs</depend>
  <depend>data_msgs</depend>
  <depend>diagnostic_extra_msgs</depend>
  <depend>geometry_extra_msgs</depend>
  <depend>maintenance_msgs</depend>
  <depend>onboard_systems_msgs</depend>
  <depend>platform_sensor_msgs</depend>
  <depend>perception_navigation_msgs</depend>
  <depend>sensor_extra_msgs</depend>
  <depend>std_extra_srvs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend>yaml-cpp</build_depend>
  <build_depend>eigen</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
